# ESP32-S3-SIM7670G-GPS-Tracker

./: .gitignore  .gitignore.bak  ARCHITECTURE_HIGH_PERFORMANCE.md  CELLULAR_NATIVE_STACK_README.md  CHANGELOG.md  CHANGES_SUMMARY.md  CMakeLists.txt  CONTRIBUTING.md  CPU_OPTIMIZATION_SUCCESS.md  DEBUGGING_SESSION_LOG.md  DEPLOYMENT_SUCCESS.md  GITHUB_SETUP.md  GPS_SUCCESS_REPORT.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MQTT_NUCLEAR_INTEGRATION_COMPLETE.md  MQTT_WORKING_CODE_REFERENCE.md  PIPELINE_ROUTING_FIX.md  PROJECT_SUMMARY.md  README.md  SEQUENTIAL_STARTUP_SUCCESS.md  SIM7670G_AT_COMMAND_REFERENCE.md  VERSIONING_WORKFLOW.md  WORKING_STATUS.md  bump_and_commit.ps1  clean_emojis.ps1  clean_emojis.py  config.template.h  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.optimization  update_version.py
.github/: copilot-instructions.md  copilot-instructions.md.bak
.github/workflows/: build.yml
main/: CMakeLists.txt  battery.c  baud_rate_tester.c  baud_rate_tester.h  config.c  config.c.bak  config.h  config.h.bak  config_user.h.bak  dual_core_manager.c  dual_core_manager.h  gps.c  gps_tracker.c  gps_tracker.c.bak  gps_tracker_native_example.c  idf_component.yml  lte_timeout_fix_demo.c  modem.c  mqtt_handler.c  multitask_manager.c  multitask_manager.h  nuclear_performance_tracker.c  nuclear_performance_tracker.h  performance_demo.c  performance_demo_simple.c  stream_router.c  stream_router.h  task_manager.c  task_manager.c.bak  task_manager.h  task_system.c  task_system.h  version.c  version.c.bak  version.h  version.h.bak
main/modules/: cellular_debug_ultra.c  cellular_debug_ultra.h  cellular_native_stack.c  cellular_native_stack.h
main/modules/apn/: apn_manager.c  apn_manager.h
main/modules/battery/: battery_module.c  battery_module.c.bak  battery_module.h
main/modules/cellular/: cellular_performance.c  cellular_performance.h
main/modules/connection/: connection_manager.c  connection_manager.h
main/modules/gps/: gps_debug.c  gps_debug.h  gps_debug_simple.c  gps_module.c  gps_module.c.bak  gps_module.h  gps_module.h.bak  gps_module_clean.c  gps_nmea_parser.c  gps_nmea_parser.h  gps_performance.c  gps_performance.h  gps_performance_simple.c  gps_raw_debug.c  gps_simple_debug.c  gps_simple_nmea_reader.c
main/modules/lte/: lte_module.c  lte_module.c.bak  lte_module.h  lte_optimized_module.c  lte_optimized_module.h  lte_ppp_native.c  lte_ppp_native.h
main/modules/modem_init/: modem_init.c  modem_init.c.bak  modem_init.h  modem_init.h.bak
main/modules/mqtt/: mqtt_connection_manager.c  mqtt_connection_manager.h  mqtt_message_builder.c  mqtt_message_builder.h  mqtt_module.c  mqtt_module.c.bak  mqtt_module.h  mqtt_module.h.bak  mqtt_module_clean.c  mqtt_module_clean.c.bak  mqtt_native_tcp.c  mqtt_native_tcp.h  mqtt_publisher.h
main/modules/parallel/: esp32s3_etm_engine.c  esp32s3_etm_engine.h  esp32s3_etm_gdma_test.c  esp32s3_etm_gdma_test.h  esp32s3_gdma_streaming.c  esp32s3_gdma_streaming.h  esp32s3_hardcore_demo.c  esp32s3_hardcore_demo.h  esp32s3_hardcore_optimization.c  esp32s3_hardcore_optimization.h  esp32s3_simd_engine.c  esp32s3_simd_engine.h  esp32s3_ultra_parallel.c  esp32s3_ultra_parallel.h  nuclear_acceleration.c  nuclear_acceleration.h  nuclear_integration.c  nuclear_integration.h  nuclear_startup.c  nuclear_startup.h  uart_pipeline_enhanced.h  uart_pipeline_nuclear.c  uart_pipeline_nuclear.h  uart_pipeline_nuclear_private.c  uart_pipeline_nuclear_private_broken.c  uart_pipeline_nuclear_private_etm_broken.c  uart_pipeline_nuclear_private_gdma_broken.c  uart_pipeline_nuclear_public.h
main/tasks/: battery_task.c  cellular_task.c  gps_task.c  mqtt_task.c
