idf_component_register(SRCS "gps_tracker.c" "config.c" "version.c" "baud_rate_tester.c" "task_manager.c"
                           "task_system.c"
                           "dual_core_manager.c"
                           "multitask_manager.c"
                           "stream_router.c"
                           "tasks/cellular_task.c"
                           "tasks/gps_task.c"
                           "tasks/mqtt_task.c"
                           "tasks/battery_task.c"
                           "modules/gps/gps_module.c"
                           "modules/gps/gps_debug.c"
                           "modules/lte/lte_module.c" 
                           "modules/mqtt/mqtt_module.c"
                           "modules/battery/battery_module.c"
                           "modules/modem_init/modem_init.c"
                           "modules/apn/apn_manager.c"
                           "modules/connection/connection_manager.c"
                    INCLUDE_DIRS "." "modules" "tasks"
                    REQUIRES driver esp_timer nvs_flash json esp_psram)