idf_component_register(SRCS "gps_tracker.c" "config.c" "version.c" "baud_rate_tester.c" "task_manager.c"
                           "task_system.c"
                           "dual_core_manager.c"
                           "multitask_manager.c"
                           "stream_router.c"
                           "tasks/cellular_task.c"
                           "tasks/gps_task.c"
                           "tasks/mqtt_task.c"
                           "tasks/battery_task.c"
                           "modules/gps/gps_simple_nmea_reader.c"
                           "modules/gps/gps_debug.c"
                           "modules/parallel/esp32s3_ultra_parallel.c"
                           "modules/parallel/esp32s3_etm_engine.c"
                           "modules/parallel/esp32s3_gdma_streaming.c"
                           "modules/parallel/esp32s3_simd_engine.c"
                           "modules/parallel/esp32s3_etm_gdma_test.c"
                           "modules/parallel/esp32s3_hardcore_optimization.c"
                           "modules/parallel/esp32s3_hardcore_demo.c"
                           "modules/parallel/uart_pipeline_nuclear_private.c"
                           "modules/parallel/uart_pipeline_nuclear.c"
                           "modules/parallel/nuclear_integration.c"
                           "modules/parallel/nuclear_startup.c"
                           "modules/parallel/nuclear_acceleration.c"
                           "modules/gps/gps_nmea_parser.c"
                           "modules/mqtt/mqtt_connection_manager.c"
                           "modules/mqtt/mqtt_message_builder.c"
                           "nuclear_performance_tracker.c"
                           "modules/cellular_debug_ultra.c"
                           "performance_demo_simple.c"
                           "modules/lte/lte_module.c"
                           "modules/lte/lte_optimized_module.c"
                           "modules/lte/lte_ppp_native.c"
                           "modules/mqtt/mqtt_module.c"
                           "modules/mqtt/mqtt_native_tcp.c"
                           "modules/battery/battery_module.c"
                           "modules/modem_init/modem_init.c"
                           "modules/apn/apn_manager.c"
                           "modules/connection/connection_manager.c"
                           "modules/cellular_native_stack.c"
                    INCLUDE_DIRS "." "modules" "tasks" "modules/lte" "modules/mqtt" "modules/gps" "modules/cellular" "modules/parallel"
                    REQUIRES driver esp_timer nvs_flash json esp_psram esp_netif lwip mqtt esp_mm esp_driver_gpio esp_hw_support esp_driver_gptimer esp_driver_mcpwm esp_driver_rmt)